--- a/kitten-wars-cli-hs.cabal
+++ b/kitten-wars-cli-hs.cabal
@@ -15,5 +15,8 @@ executable kitten-wars-cli-hs
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       websockets
+  build-depends:       text
+                     , websockets
+                     , network
+                     , transformers
                      , base >= 4.7 && < 5
